Break up storage engines
We now have two different storage implementations. One, the default,
sets up DynamoDB from scratch. The other, accessed by passing
--dynamo-table, uses an existing Dynamo table and AWS roles you
provision.