@@ -13,20 +13,15 @@
                             [util :as cu]]
             [jepsen.datomic [aws :as aws]
                             [client :as client]]
-            [jepsen.datomic.db [peer :as db.peer]]
+            [jepsen.datomic.db [datomic :as datomic :refer [dir
+                                                            properties-file]]
+                               [peer :as peer]
+                               [storage :as storage]]
             [jepsen.os.debian :as debian]
             [slingshot.slingshot :refer [try+ throw+]]))
 
-(def dir
-  "Where do we download Datomic's packages?"
-  "/opt/datomic")
-
-(def properties-file
-  "The properties file for Datomic's transactor."
-  (str dir "/transactor.properties"))
-
 (def service
-  "The SystemD service name"
+  "The systemd service name"
   "datomic-transactor")
 
 (def service-file
@@ -41,35 +36,22 @@
   "The stdout logfile for the transactor."
   (str dir "/transactor.log"))
 
-(defn env
-  "Constructs an env var map for bin/transactor, bin/datomic, etc."
-  []
-  (merge (aws/env)
-         {; Work around a bug where AWS SDK v1 is incompatible with Java 17
-          ; See https://repost.aws/articles/ARPPEPfTPLTlGLHIsVVyyyYQ/troubleshooting-unable-to-unmarshall-exception-response-with-the-unmarshallers-provided-in-java
-          "DATOMIC_JAVA_OPTS" (str "--add-opens java.base/java.lang=ALL-UNNAMED "
-                                   "--add-opens java.xml/com.sun.org.apache.xpath.internal=ALL-UNNAMED")
-          ; Add our custom txn fns to the classpath
-          "DATOMIC_EXT_CLASSPATH" db.peer/jar}))
-
 (defn install!
-  "Installs the Datomic distribution."
+  "Installs the transactor service file."
   [test]
   (c/su
-    ; Install Datomic itself
-    (cu/install-archive!
-      (str "https://datomic-pro-downloads.s3.amazonaws.com/"
-           (:version test) "/datomic-pro-" (:version test) ".zip")
-      dir)
-    ; And write a transactor service file
+    (info "Installing transactor")
     (-> (io/resource "transactor.service")
         slurp
         (str/replace #"%DIR%" dir)
         (str/replace #"%LOG_FILE%" log-file)
-        (str/replace #"%ENV%" (->> (env)
-                                  (map (fn [[k v]]
-                                         (str "Environment=\"" k "=" v "\"")))
-                                  (str/join "\n")))
+        (str/replace #"%ENV%"
+                     (->> (datomic/env)
+                          ; Add our custom txn fns to the classpath
+                          (merge {"DATOMIC_EXT_CLASSPATH" peer/jar})
+                          (map (fn [[k v]]
+                                 (str "Environment=\"" k "=" v "\"")))
+                          (str/join "\n")))
         (str/replace #"%EXEC_START%"
                      (str dir "/bin/transactor "
                           "-Ddatomic.printconnectionInfo=true "
@@ -77,36 +59,24 @@
         (cu/write-file! service-file))
     (c/exec :systemctl :daemon-reload)))
 
-(defn datomic!
-  "Runs a bin/datomic command with arguments, providing various env vars."
-  [& args]
-  (c/su
-    (c/cd dir
-          (apply c/exec (c/env (env)) "bin/datomic" args))))
-
 (defn configure!
   "Writes initial config file"
-  [test]
+  [test storage]
   (c/su
+    (info "Configuring transactor.properties")
     (-> (io/resource "transactor.properties")
         slurp
+        (str/replace #"%STORAGE%" (storage/properties-snippet storage test))
         (str/replace #"%HOST%" (cn/local-ip))
         (str/replace #"%OBJECT_CACHE_MAX%"       (:object-cache-max test))
         (str/replace #"%MEMORY_INDEX_THRESHOLD%" (:memory-index-threshold test))
         (str/replace #"%MEMORY_INDEX_MAX%"       (:memory-index-max test))
         (cu/write-file! properties-file))))
 
-(defn setup-dynamo!
-  "Sets up DynamoDB, creating initial tables and IAM roles/policies"
-  [test]
-  ; See https://docs.datomic.com/pro/overview/storage.html#automated-setup
-  (datomic! :ensure-transactor properties-file properties-file)
-  (aws/provision-io! test))
-
 (defn start!
   "Launches the transactor daemon."
   []
-  (info "Starting transactor...")
+  (info "Starting transactor")
   (c/su (c/exec :systemctl :start service))
   :started)
 
@@ -126,18 +96,21 @@
       (catch [:exit 5] _
         :doesn't-exist))))
 
-(defrecord DynamoDB []
+(defrecord Transactor [storage peer]
   db/DB
   (setup! [this test node]
-    ; Handled by jepsen.datomic.db
-    )
+    (install! test)
+    (configure! test storage)
+    ; We need storage available
+    (db/setup! storage test node)
+    ; And before we can start, we need the peer jar installed
+    (peer/install-jar! test)
+    ; Now we can start
+    (start!))
 
   (teardown! [this test node]
     (stop!)
-    (when (= node (jepsen/primary test))
-      (aws/delete-all!))
-    (c/su
-      (c/exec :rm :-rf dir)))
+    (db/teardown! storage test node))
 
   db/LogFiles
   (log-files [this test node]
@@ -162,7 +135,8 @@
   (resume! [this test node]
     (c/su (cu/grepkill! :cont kill-pattern))))
 
-(defn dynamo-db
-  "Constructs a fresh DynamoDB-backed transactor DB."
-  [opts]
-  (DynamoDB.))
+(defn db
+  "Constructs a fresh transactor given CLI options and Peer and Storage DBs.
+  The transactor manages storage's setup and teardown."
+  [opts storage peer]
+  (Transactor. storage peer))
